# pkg-identity-clustering

./: .gitignore  README.md  cluster.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
identity_cluster/: .gitignore  Inference.py  base.py  cluster.py  notebook.ipynb  util.py
identity_cluster/models/: models_list.py
tests/: base_test.py  cluster_test.py
